styles/style.css
*{
    margin:0;
    padding:0;
    box-sizing: border-box;
}
html{
    width: 100%;
    height: 100%;
}

body{
    width: 100%;
    height: 100%;
    
}

#container{
    background-color: antiquewhite;
    width: 100%;
    height: 100%;
    display: grid;
    grid-template-areas: 
    "."
    "score" 
    "buttons" 
    "selection-img"
    "results" 
    ".";
    grid-template-rows: 5% 20% 15% 14% 45% 1% ;
    row-gap: 0px;

}

#score-sheet{
    margin-left: auto;
    margin-right: auto;
    grid-area: score;
    display: flex;
    flex-direction: row;
    column-gap: 100px;
}

.selections-list{
    grid-area: buttons;
    display:flex;
    justify-content: center;
    column-gap: 100px;
}

.selections{
    width: fit-content;
    height: 40%;
    margin-top: auto;
    margin-bottom: auto;
    font-size: 3vmin;
    font-weight: 600;
}
#selection-image-box{
    grid-area: selection-img;
    margin: auto;
    display: flex;
    justify-content: space-around;
    column-gap: 20vmin;
    
}
img{
    margin: auto;
    width: 30vmin;
    height: 30vmin;
}

#results{
    grid-area: results;
    margin: auto;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    text-align: left;
}

#player-box{
    width: 25vmin;
    height: 90%;
    background-color: cornflowerblue;
    display: grid;
    grid-template-areas: "whop" "." "scorep";
    grid-template-rows: 30% 5% 65%;

}

#comp-box{
    width: 25vmin;
    height: 90%;
    background-color: lightcoral ;
    display: grid;
    grid-template-areas: "whoc" "." "scorec";
    grid-template-rows: 30% 5% 65%;
}

.whop{
    text-align: center;
    grid-area: whop;
    font-size: 4vmin;
}

.whoc{
    text-align: center;
    grid-area: whoc;
    font-size: 4vmin;    
}

#player{
    text-align: center;
    text-justify: auto;
    grid-area: scorep;
    font-size: 8vmin;
}

#comp{
    text-align: center;
    text-justify: auto;
    grid-area: scorec;
    font-size: 8vmin;
}

#result1, #result2{
    border-style: solid;
    border-width:3px;
    border-color: black;
    font-size: 0.1vmin;
}

